app/styles/main.scss
$icon-font-path: "../../bower_components/font-awesome/fonts/";

@import "../../bower_components/ubuntu-fontface/_ubuntu-base.scss";
@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-dark.scss";
@import "../../bower_components/font-awesome/scss/font-awesome.scss";
@import "../../node_modules/ozp-react-commons/app/styles/commons.scss";

html, body {
    background: $body-bg;
    font-family: 'Ubuntu';
    font-weight: 300;
}

#main {
    margin: 0 auto;
    display: block;
    min-height: 100%;
    height: auto !important;
    width: 100% !important;

    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, .1);
    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .1);
    box-shadow: 0 0 3px rgba(0, 0, 0, .1);
}

h1 {
  padding-left: 20px;
  padding-bottom: 10px;
  font-size: ceil($font-size-base * 1.75);
}

.activeIcon {
  color: $blue !important;
}

@media (max-width: 1023px) and (min-width: 800px) {
    #main {
        width: 800px !important;
        transition: all .25s linear;
    }
}

embed {
    border: 0;
}

.divider-vertical {
    height: 40px;
    margin: 0 9px;
}
#login-page{

    .login-logo{
        height: 237px;
        width: 320px;
        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-top: 30px;

    }

    form{
        color: white;
        width: 300px;
        margin: 0 auto;
        font-size: 14px;
    }
    label{
        font-size: 14px;
        height: auto;
        width: auto;
    }
    .login-btn{
        width: 275px;
        height: 30px;
        background-color: #1A71A6;
        border-color: white;
        margin: 7px;
    }
    .login-text-field{
        width: 200px;
        height: 25px;
        margin: 7px;
        background-color: #313836;
        border-style: none;
    }
    .logout-text{
      text-align: center;
      color: #eeeeef;
      margin-right: 35px;
    }
}

.close {
    font-size: 3em;
    font-weight: lighter;
    top: 0;
    margin-top: -10px;
}

@import 'variables';
@import 'header';
@import 'search';
@import 'library';
@import 'alerts';
@import 'modal';
@import 'folder';

/*=======================
= Classification Banner =
=======================*/

@import "../../bower_components/ozp-classification/classification.css";

body {
    margin-top:20px;
}

body > div.classBanner:first-of-type {
    position: fixed;
    top: 0;
    z-index: 100;
}
body > div.classBanner:last-of-type {
    position: fixed;
    bottom: 0;
    z-index: 100;
}

